--- a/css/main.css
+++ b/css/main.css
@@ -211,7 +211,8 @@ iframe {
   font-size: 16px;
   color: #333333;
   line-height: 1.2;
-
+  border: 1px solid #898e92;
+  border-radius: 20px;
   display: block;
   width: 100%;
   height: 55px;
